--- a/GameFiles/Bug Game/Assembly-CSharp.csproj
+++ b/GameFiles/Bug Game/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\PauseMenuHandler.cs" />
     <Compile Include="Assets\Scripts\Node.cs" />
+    <Compile Include="Assets\Scripts\rotation.cs" />
     <Compile Include="Assets\Scripts\Zoom.cs" />
     <Compile Include="Assets\Scripts\Bushes.cs" />
     <Compile Include="Assets\Scripts\Grid.cs" />
@@ -64,7 +65,7 @@
     <Compile Include="Assets\Scripts\MechanismHandler.cs" />
     <Compile Include="Assets\Scripts\ButtonControl.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
-    <Compile Include="Assets\Scripts\rotation.cs" />
+    <Compile Include="Assets\Scripts\ActivateButton.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
